--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -791,21 +791,17 @@
                 <!-- Populated dynamically -->
             </select>
 
-            <label style="display:block; margin-bottom:8px; color:#e2e8f0; font-weight:500;">Initial Password</label>
-            <div style="display:flex; gap:10px; margin-bottom:5px;">
-                <input type="text" id="staffPassword" placeholder="Auto-generated if empty"
-                    style="flex:1; padding:12px; background:#1e293b; border:1px solid #334155; border-radius:8px; color:#fff; font-size:14px;">
-                <button type="button" onclick="generateStaffPassword()"
-                    style="padding:12px 20px; background:#3b82f6; color:white; border:none; border-radius:8px; cursor:pointer; white-space:nowrap; font-weight:600; transition:background 0.2s;"
-                    onmouseover="this.style.background='#2563eb'" onmouseout="this.style.background='#3b82f6'">
-                    🎲 Generate
-                </button>
+            <div
+                style="background:#1e293b; border:1px solid #334155; border-radius:8px; padding:15px; margin-bottom:20px;">
+                <p style="color:#94a3b8; font-size:13px; margin:0; line-height:1.6;">
+                    ℹ️ <strong style="color:#e2e8f0;">How staff login:</strong><br>
+                    Staff members will use the regular customer login (Google or SMS). Once they login, they'll see
+                    options for both Admin Dashboard and Customer Menu.
+                </p>
             </div>
-            <small style="color:#94a3b8; margin-top:0; margin-bottom:20px; display:block;">Minimum 6 characters. Share
-                this with the staff member securely.</small>
 
             <div style="display:flex; gap:10px; margin-top:20px;">
-                <button onclick="saveStaff()" class="btn-primary">Create Account</button>
+                <button onclick="saveStaff()" class="btn-primary">Add Staff Member</button>
                 <button onclick="closeStaffModal()">Cancel</button>
             </div>
         </div>
