Fix: Properly place showSection outside checkAdminAccess IIFE

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -891,19 +891,19 @@
         let currentUserPermissions = 0;
 
         // --- AUTH & INIT ---
+        // === NAVIGATION ===
+        function showSection(sectionId) {
+            document.querySelectorAll('.content-section').forEach(s => s.style.display = 'none');
+            const target = document.getElementById(sectionId + '-section');
+            if (target) target.style.display = 'block';
+            document.querySelectorAll('.nav-item').forEach(i => i.classList.remove('active'));
+            if (event && event.target) event.target.classList.add('active');
+            const titles = {'dashboard':'Dashboard','orders':'Calls (Orders)','history':'History','menu':'Menu Management','staff':'Staff Management','roles':'Roles & Permissions','tables':'Tables'};
+            document.getElementById('pageTitle').textContent = titles[sectionId] || 'Dashboard';
+        }
+        
         (async function checkAdminAccess() {
             // 1. Session Check
-            // === NAVIGATION ===
-            function showSection(sectionId) {
-                document.querySelectorAll('.content-section').forEach(s => s.style.display = 'none');
-                const target = document.getElementById(sectionId + '-section');
-                if (target) target.style.display = 'block';
-                document.querySelectorAll('.nav-item').forEach(i => i.classList.remove('active'));
-                event.target.classList.add('active');
-                const titles = { 'dashboard': 'Dashboard', 'orders': 'Calls (Orders)', 'history': 'History', 'menu': 'Menu Management', 'staff': 'Staff Management', 'roles': 'Roles & Permissions', 'tables': 'Tables' };
-                document.getElementById('pageTitle').textContent = titles[sectionId] || 'Dashboard';
-            }
-
             const { data: { session } } = await _supabase.auth.getSession();
             let user = session?.user;
 
