Fix: Correct indentation of window assignments to script root level

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -2097,6 +2097,7 @@
             }
 
             // Expose to window
+            // Expose to window
             window.openMenuModal = openMenuModal;
             window.closeMenuModal = closeMenuModal;
             window.saveMenuItem = saveMenuItem;
