Fix: Add missing closing braces for checkAdminAccess IIFE and fix window assignment indentation

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -2095,14 +2095,14 @@
                     alert('Failed to save: ' + err.message);
                 }
             }
+        }) (); // Close checkAdminAccess IIFE
 
-            // Expose to window
-            // Expose to window
-            window.openMenuModal = openMenuModal;
-            window.closeMenuModal = closeMenuModal;
-            window.saveMenuItem = saveMenuItem;
-            window.deleteMenuItem = deleteMenuItem;
-            window.handleCategoryChange = handleCategoryChange;
+        // Expose to window
+        window.openMenuModal = openMenuModal;
+        window.closeMenuModal = closeMenuModal;
+        window.saveMenuItem = saveMenuItem;
+        window.deleteMenuItem = deleteMenuItem;
+        window.handleCategoryChange = handleCategoryChange;
     </script>
 </body>
 
